--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "class-transformer": "^0.3.1",
     "firebase": "^10.7.1",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
