--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "primeicons": "^6.0.1",
     "primeng": "^17.2.0",
     "rxjs": "~7.8.0",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.10.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
